@@ -1,3 +1,8 @@
+2006-04-08  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/secext.h: Enclose function declarations in extern "C"
+	if __cplusplus.
+
 2006-04-11  Chris Sutcliffe <ir0nh34d@users.sourceforge.net>
 
     * include/comcat.h: INTERFACE should not remain defined
